Fixed Alignment

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -150,7 +150,7 @@ body {
 					padding: 5px;
 					width: 30px;
 					height: 30px;
-					vertical-align: top;
+					
 				}
 
 				&:not(:last-child):hover {
@@ -163,11 +163,13 @@ body {
 
 				&#logbookBTN img {
 					background: url(../../images/darksprite.png) no-repeat 5px -118px;
+					vertical-align: top;
 				}
 
 				&#settingsBTN {
 					img {
 						background: url(../../images/darksprite.png) no-repeat 5px -158px;
+						vertical-align: top;
 					}
 
 					ul {
@@ -218,6 +220,7 @@ body {
 						background: url(../../images/sync.png) no-repeat 5px 0px;
 					}
 				}
+
 
 				#search {
 					position: relative;
